syntax = "proto3";

package Icy.Protobuf.Editor;


message ProtoSetting
{
    //编译Proto的Bat脚本路径
    string CompileBatPath = 1;
	//Proto编译后的代码的输出目录
	string ProtoOutputDir = 2;
	//Proto的程序集名称
	string ProtoAssemblyName = 3;
}
